# desafio_backend

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Crédito Express - Desafio.postman_collection.json  Dockerfile  Gemfile  Insomnia_2021-02-22.json  Makefile  README.md  app.py  args.py  db.sqlite3  desafio_readme.md  docker-compose.yml  entrypoint.sh  jest.config.js  main.py  manage.py  ormconfig.json  package.json  pyproject.toml  requirements.txt  restart.sh  seed.py  taxas.json  test_main.py  tsconfig.json
app/: .coverage  .env  Dockerfile  __main__.py  app.py  docker-compose.yml  init-db.js  init.py  main.py  requirements.txt  seed.py  wsgi.py
app/auth/: __init__.py  exceptions.py  models.py  services.py  user.py
application/: uwsgi.ini
calcAPI/: apps.py  serializers.py  urls.py  views.py
calculadora_emprestimo/: README.md  calculadora.py
calculo_api/: app.py  requirements.txt
clientes/: admin.py  models.py  urls.py  views.py
clientesAPI/: apps.py  serializer.py  urls.py  views.py
clients_api/: Dockerfile  README.md  app.py  requirements.txt
config/: application.rb  cable.yml  credentials.yml.enc  master.key  mongoid.yml  routes.rb
dados/: taxas.json
data/: fees.json
docs/: README.md
express/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: forms.py  urls.py  views.py
mongo/: Dockerfile
nginx/: Dockerfile
routes/: routes.py
scripts/: __init__.py
taxas_api/: Dockerfile  README.md  app.py  requirements.txt
tmp/: development_secret.txt
utils/: getScore.py  getTaxa.py  getTipo.py  jsonImporter.py  taxas.py
(+3696 files in other folders)
